k8s/argocd/system/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-security
  namespace: argocd
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/part-of: argocd
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
            - port: "8083"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/part-of: argocd
  egress:
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/part-of: argocd
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "22"
              protocol: TCP
